tests/specs/ecosystem/schematicos/zod/0_0_3.test
schematicos/zod/0.0.3
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "jsr:@schematicos/generate@0.0.14": "jsr:@schematicos/generate@0.0.14",
      "jsr:@std/assert@^0.222.1": "jsr:@std/assert@0.222.1",
      "jsr:@std/path@0.222.1": "jsr:@std/path@0.222.1",
      "npm:@schematicos/types@0.0.34": "npm:@schematicos/types@0.0.34",
      "npm:tiny-invariant@1.3.3": "npm:tiny-invariant@1.3.3",
      "npm:ts-pattern@5.1.1": "npm:ts-pattern@5.1.1"
    },
    "jsr": {
      "@schematicos/generate@0.0.14": {
        "integrity": "4868daf181df52ce4bf6e85020fab25a8be0d18f53a4048467d6b0adae78bb90",
        "dependencies": [
          "jsr:@std/path@0.222.1",
          "npm:@schematicos/types@0.0.34",
          "npm:tiny-invariant@1.3.3",
          "npm:ts-pattern@5.1.1"
        ]
      },
      "@std/assert@0.222.1": {
        "integrity": "691637161ee584a9919d1f9950ddd1272feb8e0a19e83aa5b7563cedaf73d74c"
      },
      "@std/path@0.222.1": {
        "integrity": "aad3e9463ca53b0adb25b4d5beb330025674aaa3278da24c1c261d9289a9e48b",
        "dependencies": [
          "jsr:@std/assert@^0.222.1"
        ]
      }
    },
    "npm": {
      "@schematicos/types@0.0.34": {
        "integrity": "sha512-KOb9sdaLoSsstN3/QdTALNCvXZ9NWNMxudMOyCRq7fzxCk555ERCCIG3LBUG7ovOXOn/56dkxIpCpvoj+2zQTQ==",
        "dependencies": {
          "zod": "zod@3.23.8"
        }
      },
      "tiny-invariant@1.3.3": {
        "integrity": "sha512-+FbBPE1o9QAYvviau/qC5SE3caw21q3xkvWKBtja5vgqOWIHHJ3ioaq1VPfn/Szqctz2bU/oYeKd9/z5BL+PVg==",
        "dependencies": {}
      },
      "ts-pattern@5.1.1": {
        "integrity": "sha512-i+owkHr5RYdQxj8olUgRrqpiWH9x27PuWVfXwDmJ/n/CoF/SAa7WW1i2oUpPDMQpJ4U+bGRUcZkVq7i1m3zFCg==",
        "dependencies": {}
      },
      "zod@3.23.8": {
        "integrity": "sha512-XBx9AXhXktjUqnepgTiE5flcKIYWi/rme0Eaj+5Y0lftuGBq+jyRu/md4WnuxqgP1ubdpNCsYEYPxrzVHD8d6g==",
        "dependencies": {}
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: JSR package manifest for '@schematicos/generate' failed to load. Import 'https://jsr.io/@schematicos/generate/meta.json' failed: error sending request for url (https://jsr.io/@schematicos/generate/meta.json): client error (Connect): dns error: failed to lookup address information: nodename nor servname provided, or not known: failed to lookup address information: nodename nor servname provided, or not known
    at file://<tmpdir>/mod.ts:1:33

